implemented delete endpoint and updated junit coverage for jwt validator
